Finished HTML and Terminal

--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -8,9 +8,13 @@
     <!-- DON'T TOUCH ANYTHING ABOVE THIS LINE -->
   </head>
   <body>
-    <!-- h1 goes here -->
-    <!-- ol goes here -->
-    <!-- a goes here -->
-    <!-- p goes here -->
+    <h1>Why I love web development</h1>
+    <ol>
+      <li>websites are neato</li>
+      <li>programming is neato</li>
+      <li>knowledge is power</li>
+    </ol>
+    <a href="Launchcode exercise">https://education.launchcode.org/intro-to-web-dev-curriculum/html/exercises/index.html</a>
+    <p>While I'm not really a fan of front end learning this stuff is an important aspect of learning how the internet works</p>
   </body>
 </html>
