--- a/user-input-with-forms/exercises/index.html
+++ b/user-input-with-forms/exercises/index.html
@@ -8,9 +8,22 @@
     </style>
   </head>
   <body>
-    <!-- TODO: add form here -->
-    
+    <form action="https://handlers.education.launchcode.org/request-parrot" method="post">
+      <label>Test Name<input type="text" name="testName"/></label>
+      <label>Test Date<input type="date" name="testDate"/></label>
+      <label>Rocket Type:
+        <select name="rocketType">
+        <option value="">*Select One*</option>
+        <option value="Brant">*Select One*</option>
+        <option value="Lynx">*Select One*</option>
+        <option value="Orion">*Select One*</option>
+        <option value="Terrier">*Select One*</option>
+        </select>
+      </label>
 
+
+
+    </form>
     <p>WARNING: This ONLY works in <b>replit</b> if this "result" page is opened in its own window. Click the icon that shows a box with an arrow coming out of it.
     </p>
   </body>
