--- a/user-input-with-forms/exercises/index.html
+++ b/user-input-with-forms/exercises/index.html
@@ -21,7 +21,14 @@
         </select>
       </label>
 
-
+      <label>Number of Rocket Boosters<input type="number" name="boosterCount"/></label>
+      Wind Rating:
+        <label>No Wind<input type="radio" name="windRating" value="noWind"/></label>
+        <label>Mild<input type="radio" name="windRating" value="mild"/></label>
+        <label>Strong<input type="radio" name="windRating" value="strong"/></label>
+      <label>Use production grade servers<input type="checkbox" name="productionServers"/></label>
+      
+      <button>Run Simulation</button>
 
     </form>
     <p>WARNING: This ONLY works in <b>replit</b> if this "result" page is opened in its own window. Click the icon that shows a box with an arrow coming out of it.
